--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.ImageURL)
         </dt>
         <dd class = "col-sm-10">
-            <img src="model.ImageURL" alt="avatar" />
+            @Html.DisplayFor(model => model.ImageURL)
         </dd>
     </dl>
 </div>
